Use absolute rather than fixed position on components